Apply the eclipse google style