@@ -24,10 +24,8 @@ class StreamUtilsTest {
   @Test
   void partition() {
     List<Integer> list = IntStream.range(0, 100).mapToObj(i -> i).toList();
-    List<List<Integer>> partitions =
-      StreamUtils.partition(list.stream(), 10)
-        .map(stream -> stream.collect(Collectors.toList()))
-        .toList();
+    List<List<Integer>> partitions = StreamUtils.partition(list.stream(), 10)
+        .map(stream -> stream.collect(Collectors.toList())).toList();
     assertEquals(partitions.size(), 10);
   }
 }
